# Real-Time-Multilingual-Query-Handler_HiDevs

./: README.md  main.py  pyproject.toml
