[project]
name = "real-time-multilingual-query-handler-hidevs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deep-translator>=1.11.4",
    "langdetect>=1.0.9",
    "openai>=2.8.0",
    "pandas>=2.3.3",
    "streamlit>=1.51.0",
]
